--- a/index_mobile.html
+++ b/index_mobile.html
@@ -34,51 +34,50 @@
             <div class="player">
                 <img src="images/players/player-1.png" width="" alt="">
                 <h2>Naymar JR</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut error eaque? Non, quibusdam nulla tenetur iste repellat necessitatibus unde quam tempora</p>
+                <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
             </div>
             <div class="player">
                 <img src="images/players/player-2.png" width="" alt="">
                 <h2>Messi</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut error eaque? Non, quibusdam nulla tenetur iste repellat necessitatibus unde quam tempora.</p>
+                <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward and captains the Argentina national team.He has played all his professional career for La Liga club.</p>
             </div>
             <div class="player">
                 <img src="images/players/player-3.png" width="" alt="">
                 <h2>C Ronaldo</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut error eaque? Non, quibusdam nulla tenetur iste repellat necessitatibus unde quam tempora.</p>
+                <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
             </div>
             <div class="player">
                 <img src="images/players/player-4.png" width="" alt="">
                 <h2>Dybala</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut error eaque? Non, quibusdam nulla tenetur iste repellat necessitatibus unde quam tempora.</p>
+                <p>Dybala is an Argentine professional footballer who plays as a forward and captains the Argentina national team.He has played all his professional career for La Liga club.</p>
             </div>
             <div class="player">
                 <img src="images/players/player-5.png" width="" alt="">
                 <h2>Ozil</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut error eaque? Non, quibusdam nulla tenetur iste repellat necessitatibus unde quam tempora.</p>
+                <p>Ozil is an Argentine professional footballer who plays as a forward and captains the Argentina national team.He has played all his professional career for La Liga club.</p>
             </div>
             <div class="player">
                 <img src="images/players/player-6.png" width="" alt="">
                 <h2>Icardi</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut error eaque? Non, quibusdam nulla tenetur iste repellat necessitatibus unde quam tempora.</p>
+                <p>Icardi is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team. He has played all his professional .</p>
             </div>
             <div class="player">
                 <img src="images/players/player-7.png" width="" alt="">
                 <h2>Di Maria</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut error eaque? Non, quibusdam nulla tenetur iste repellat necessitatibus unde quam tempora</p>
+                <p>Di Maria Argentine professional footballer consectetur adipisicing elit. Totam ut error eaque? Non, quibusdam nulla tenetur repellat necessitatibus professional footballer. </p>
             </div>
             <div class="player">
                 <img src="images/players/player-8.png" width="" alt="">
                 <h2>Mbappe</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut error eaque? Non, quibusdam nulla tenetur iste repellat necessitatibus unde quam tempora.</p>
+                <p>Mbappe Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.</p>
             </div>
             <div class="player">
                 <img src="images/players/player-9.png" width="" alt="">
                 <h2>Salah</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut error eaque? Non, quibusdam nulla tenetur iste repellat necessitatibus unde quam tempora.</p>
+                <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for national team. Considered one of the best players in the world.</p>
             </div>
         </div>
-    </div>
- </section>
+    </section>
    <!-- Players name -->
 
    <!-- footer start -->
